# brlcad_externals

./: CMakeLists.txt  README.md  TODO  assetimport.cmake  astyle.cmake  gdal.cmake  itcl.cmake  itk.cmake  iwidgets.cmake  netpbm.cmake  openmesh.cmake  patch.cmake  patchelf.cmake  perplex.cmake  png.cmake  proj.cmake  proj.dist  regex.cmake  rpath_process.cmake.in  sqlite3.cmake  stepcode.cmake  tcl.cmake  tk.cmake  xmltools.cmake  zlib.cmake
.github/workflows/: check.yml
CMake/: FindJPEG.cmake  FindLMDB.cmake  FindPNG.cmake  FindSTEPCODE.cmake  SetLibVars.cmake
appleseed/: CMakeLists.txt
assetimport/: CMakeLists.txt  assetimport.patch
assetimport/assetimport/code/: CMakeLists.txt
assetimport/assetimport/code/AssetLib/MDL/: MDLFileData.h
astyle/: CMakeLists.txt  astyle.patch
astyle/astyle/: CMakeLists.txt
boost/: CMakeLists.txt  boost_build.cmake.in  boost_config.cmake.in  boost_install.cmake.in
deflate/: CMakeLists.txt
eigen/: CMakeLists.txt  eigen.patch
embree/: CMakeLists.txt
expat/: CMakeLists.txt
flexbison/: CMakeLists.txt  README  bison.patch  flex.patch  winflexbison.patch
fmt/: CMakeLists.txt
gct/: README
gct/gct/MeshDecimation2/: README  meshdecimation.c  meshdecimation.h
gct/gct/MeshDecimation2/auxiliary/: README  cc.c  cc.h  cchybridsort.h  ccmergesort.h  ccradixsort.h  ccspacecurve.c  ccspacecurve.h  ccstr.c  ccstr.h  cpuconf.c  cpuinfo.c  cpuinfo.h  fontmanager.c  fontmanager.h  mm.c  mm.h  mmatomic.h  mmbinsort.c  mmbinsort.h  mmbitmap.c  mmbitmap.h  mmhash.c  mmhash.h  mmhashinline.h  mmhashinternal.h  mmthread.h
gdal/: CMakeLists.txt  gdal.patch
ispc/: CMakeLists.txt  ispc.patch
itcl3/: CMakeLists.txt
itcl3/itcl3/: CMakeLists.txt
itk3/: CMakeLists.txt
itk3/CMake/: FindITCL.cmake
itk3/itk3/: CMakeLists.txt
iwidgets/: CMakeLists.txt
jpeg/: CMakeLists.txt
lief/: CMakeLists.txt  lief.patch
lief/lief/profiling/: macho_profiler.cpp
linenoise/: CMakeLists.txt  linenoise.patch
linenoise/linenoise/: README.markdown
llvm/: CMakeLists.txt  README  llvm_z_brl.patch
lmdb/: CMakeLists.txt  README  lmdb.patch
lz4/: CMakeLists.txt
minizip-ng/: CMakeLists.txt
ncurses/: CMakeLists.txt
netpbm/: CMakeLists.txt
oneTBB/: CMakeLists.txt
opencolorio/: CMakeLists.txt  opencolorio.patch
opencv/: CMakeLists.txt  opencv.patch
openexr/: CMakeLists.txt
openimageio/: CMakeLists.txt  openimageio.patch
openmesh/: CMakeLists.txt  openmesh.patch
openmesh/openmesh/cmake-library/VCI/: VCICommon.cmake
openmesh/openmesh/src/OpenMesh/Core/: CMakeLists.txt
opennurbs/: CMakeLists.txt  README  opennurbs.patch  opennurbs_3dm_properties.patch  opennurbs_android_uuid.patch  opennurbs_archive.patch  opennurbs_bounding_box.patch  opennurbs_brep.patch  opennurbs_brep_tools.patch  opennurbs_cmake.patch  opennurbs_defines.patch  opennurbs_example_brep.patch  opennurbs_example_gl.patch  opennurbs_file_utilities.patch  opennurbs_font.patch  opennurbs_gl.patch  opennurbs_light.patch  opennurbs_locale.patch  opennurbs_lock.patch  opennurbs_lookup.patch  opennurbs_material.patch  opennurbs_object_history.patch  opennurbs_optimize.patch  opennurbs_polyline.patch  opennurbs_precompiledheader.patch  opennurbs_statics.patch  opennurbs_string.patch  opennurbs_subd.patch  opennurbs_system.patch  opennurbs_version_number.patch  opennurbs_x.patch  opennurbs_zlib.patch
opennurbs/openNURBS/: CMakeLists.txt
openshadinglanguage/: CMakeLists.txt
osmesa/: CMakeLists.txt
ospray/: CMakeLists.txt
patch/: CMakeLists.txt
patchelf/: CMakeLists.txt
patchelf/patchelf/: CMakeLists.txt  Makefile.in  aclocal.m4  configure  patchelf.spec
patchelf/patchelf/src/: Makefile.in
patchelf/patchelf/tests/: Makefile.in  many-syms-main.c  many-syms.c
perplex/: CMakeLists.txt
perplex/perplex/: CMakeLists.txt
plief/: CMakeLists.txt
plief/plief/: CMakeLists.txt  plief.cpp
png/: CMakeLists.txt  png.patch
poly2tri/: CMakeLists.txt  README
poly2tri/poly2tri/: CMakeLists.txt
proj/: CMakeLists.txt
proj/proj/cmake/: FindSQLite3.cmake
proj/proj/test/unit/: CMakeLists.txt
proj/src/: lib_proj.cmake
pugixml/: CMakeLists.txt
pystring/: CMakeLists.txt
pystring/pystring/: CMakeLists.txt
qt6/: CMakeLists.txt  README  qt_build.cmake.in  qt_config.cmake.in  qt_install.cmake.in  qtsvg.patch
qt6/qtsvg/: CMakeLists.txt
qt6/qtsvg/src/svg/: CMakeLists.txt
regex/: CMakeLists.txt
rkcommon/: CMakeLists.txt
sqlite3/: CMakeLists.txt
stepcode/: CMakeLists.txt
strclear/: CMakeLists.txt
strclear/strclear/: CMakeLists.txt  MappedFile.cpp  MappedFile.hpp  strclear.cpp  strnstr.c
tcl/: CMakeLists.txt  tcl-z_brl.patch  tcl.patch  tcl_replace.cxx.in
tcl/tcl/generic/: tclConfig.c
tcl/tcl/macosx/: Tcl-Common.xcconfig  configure
tcl/tcl/macosx/Tcl.xcode/: project.pbxproj
tcl/tcl/macosx/Tcl.xcodeproj/: project.pbxproj
tcl/tcl/unix/: Makefile.in  configure  configure.in
tcl/tcl/win/: Makefile.in  configure  configure.in  makefile.vc
tiff/: CMakeLists.txt  tiff.patch
tk/: CMakeLists.txt  tk.patch
tkhtml/: CMakeLists.txt
tkhtml/tkhtml/: CMakeLists.txt
tktable/: CMakeLists.txt
tktable/tktable/: CMakeLists.txt
utahrle/: CMakeLists.txt  README
utahrle/utahrle/: AUTHORS  CMakeLists.txt  README
xerces-c/: CMakeLists.txt  xerces-c.patch
xmltools/: CMakeLists.txt  README
xmltools/xmltools/libexslt/: CMakeLists.txt
xmltools/xmltools/libxml/: CMakeLists.txt
xmltools/xmltools/libxslt/: CMakeLists.txt
yaml-cpp/: CMakeLists.txt
zlib/: CMakeLists.txt  TODO  zlib.patch
